// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`navigationSubMenu > should render a button 1`] = `
<div>
  <li
    class="_listItem_e39c6c"
  >
    <button
      class="_button_e39c6c text-large"
      type="button"
    >
      root label
    </button>
  </li>
</div>
`;

exports[`navigationSubMenu > should render a button 2`] = `
<div>
  <li
    class="_listItem_e39c6c"
  >
    <button
      class="_button_e39c6c text-large"
      type="button"
    >
      root label
    </button>
    <ul
      class="_list_e39c6c"
    >
      <li
        class="_navItem_ac9245"
      >
        <a
          class="_link_ac9245 text-large"
          href="/specific/page"
        >
          specific page
        </a>
      </li>
      <li
        class="_navItem_ac9245"
      >
        <a
          class="_link_ac9245 text-large"
          href="/"
        >
          homepage
        </a>
      </li>
      <li
        class="_navItem_ac9245"
      >
        <a
          class="_link_ac9245 text-large"
          href="https://example.com"
        >
          external
        </a>
      </li>
    </ul>
    <div
      class="_arrow_e39c6c"
    />
  </li>
</div>
`;
